Alteração de valores e imagens

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -79,8 +79,8 @@
 								</section>
 
 						</div>
-						<img src="img/k4.jpg" width="394px" height="320px">
-						<img src="img/k2.jpg" width="440px" height="320px">
+						<img src="img/kaka.jpg" width="394px" height="320px">
+						
 
 						<div class="8u 12u$(2) important(2)">
 						
