--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<div class="row">
 						<div class="4u 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/f2.jpeg" width="300px" height="372px" alt=""/></a>
+								<a href="#" class="image fit"><img src="img/f2.jpeg" width="342px" height="425px" alt=""/></a>
 								<h3>Flaire</h3>
 								<p> peça queridinha da tendência anos 70 estão com tudo em diversas opções de estampas</p>
 								<ul class="actions">
@@ -127,7 +127,7 @@
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/l5.jpeg" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/l5.jpeg" width="342px" height="425px" alt="" /></a>
 								<h3>Legging</h3>
 								<p>As calças legging vieram para ficar, praticamente todas as mulheres usam, de todas as idades. </p>
 								<ul class="actions">
@@ -137,7 +137,7 @@
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
 							<article class="box post">
-								<a href="#" class="image fit"><img src="img/s1.jpeg" width="300px" height="370px" alt="" /></a>
+								<a href="#" class="image fit"><img src="img/s1.jpeg" width="342px" height="425px" alt="" /></a>
 								<h3>Calçados</h3>
 								<p>Rasteirinhas, Sapatilhas, Sandálias, Tênis, tudo para o conforto e beleza dos seus pés.</p>
 								<ul class="actions">
